Switch to Java 21 + Math.clamp: 1479 → 1473 bytes (6 bytes saved)
- Replace Math.max/Math.min pairs with Math.clamp (Java 21 API)
- Update gradle.properties, bb.edn, scripts to use Java 21 (21.0.11-amzn)
- Remove sourceCompatibility/targetCompatibility from build.gradle
- New baseline: 1473 bytes (26 bytes headroom)